--- a/crates/mandelbrot/Cargo.toml
+++ b/crates/mandelbrot/Cargo.toml
@@ -3,9 +3,10 @@ name = "mandelbrot"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 num = "0.4"
 image = "0.13.0"
 crossbeam = "0.8"
+num_cpus = "1.16.0"
+num-traits = "0.2.18"
